--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
 
 <body>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+
+  <p><span id="point-info"></span></p>
   <canvas id="board-canvas"></canvas>
   <script src="./bootstrap.js"></script>
 </body>
