--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 <body>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
 
-  <p><span id="point-info"></span></p>
+  <p><span id="point-info"></span><span id="path-info"></span></p>
   <canvas id="board-canvas"></canvas>
   <script src="./bootstrap.js"></script>
 </body>
