--- a/www/public/index.html
+++ b/www/public/index.html
@@ -17,7 +17,7 @@
     <canvas id="board-canvas"></canvas>
   </div>
 
-  <script src="./bootstrap.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
