add heuristical multiplier to ui
needs some fixin...

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -12,7 +12,9 @@
 
   <div class="container">
     <div class="controls">
-      <span id="point-info"></span><span id="path-info"></span>
+      <span id="point-info"></span>
+      <span>H* <input type="number" id="heuristical-multiplier" value="1" /></span>
+      <span id="path-info"></span>
     </div>
     <canvas id="board-canvas"></canvas>
   </div>
