draw grid on separate canvas

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -16,7 +16,10 @@
       <span>H* <input type="number" id="heuristical-multiplier" value="1" /></span>
       <span id="path-info"></span>
     </div>
-    <canvas id="board-canvas"></canvas>
+    <div class="board-container">
+      <canvas id="board-canvas"></canvas>
+      <canvas id="board-canvas-grid"></canvas>
+    </div>
   </div>
 
   <script src="./index.js"></script>
